--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,51 @@
-Package                       Version
------------------------------ ---------
-asgiref                       3.5.2
-async-timeout                 4.0.2
-certifi                       2022.9.24
-cffi                          1.15.1
-charset-normalizer            2.1.1
-cloudinary                    1.30.0
-cryptography                  38.0.1
-defusedxml                    0.7.1
-Deprecated                    1.2.13
-distlib                       0.3.6
-dj-database-url               1.0.0
-dj-rest-auth                  2.2.5
-Django                        4.1.1
-django-allauth                0.51.0
-django-cloudinary-storage     0.3.0
-django-cors-headers           3.13.0
-django-filter                 22.1
-django-rest-multiple-models   2.1.3
-djangorestframework           3.14.0
-djangorestframework-simplejwt 5.2.1
-filelock                      3.8.0
-gunicorn                      20.1.0
-idna                          3.4
-igdb-api-v4                   0.0.5
-install                       1.3.5
-mysqlclient                   2.1.1
-oauthlib                      3.2.1
-packaging                     21.3
-Pillow                        9.2.0
-pip                           22.2.2
-pipenv                        2022.9.24
-platformdirs                  2.5.2
-protobuf                      4.21.7
-psycopg2-binary               2.9.3
-pycparser                     2.21
-PyJWT                         2.5.0
-pyparsing                     3.0.9
-python3-openid                3.2.0
-pytz                          2022.4
-redis                         4.3.4
-requests                      2.28.1
-requests-oauthlib             1.3.1
-setuptools                    65.4.1
-six                           1.16.0
-spotipy                       2.20.0
-sqlparse                      0.4.3
-tmdbsimple                    2.9.1
-types-cryptography            3.3.23
-urllib3                       1.26.12
-virtualenv                    20.16.5
-virtualenv-clone              0.5.7
-wheel                         0.37.1
-whitenoise                    6.2.0
-wrapt                         1.14.1
+asgiref==3.5.2
+async-timeout==4.0.2
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+cloudinary==1.30.0
+cryptography==38.0.1
+defusedxml==0.7.1
+Deprecated==1.2.13
+distlib==0.3.6
+dj-database-url==1.0.0
+dj-rest-auth==2.2.5
+Django==4.1.1
+django-allauth==0.51.0
+django-cloudinary-storage==0.3.0
+django-cors-headers==3.13.0
+django-filter==22.1
+django-rest-multiple-models==2.1.3
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.1
+filelock==3.8.0
+gunicorn==20.1.0
+idna==3.4
+igdb-api-v4==0.0.5
+install==1.3.5
+mysqlclient==2.1.1
+oauthlib==3.2.1
+packaging==21.3
+Pillow==9.2.0
+pipenv==2022.9.24
+platformdirs==2.5.2
+protobuf==4.21.7
+psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.5.0
+pyparsing==3.0.9
+python3-openid==3.2.0
+pytz==2022.4
+redis==4.3.4
+requests==2.28.1
+requests-oauthlib==1.3.1
+six==1.16.0
+spotipy==2.20.0
+sqlparse==0.4.3
+tmdbsimple==2.9.1
+types-cryptography==3.3.23
+urllib3==1.26.12
+virtualenv==20.16.5
+virtualenv-clone==0.5.7
+whitenoise==6.2.0
+wrapt==1.14.1
