--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,13 @@ Deprecated==1.2.13
 distlib==0.3.6
 dj-database-url==1.0.0
 dj-rest-auth==2.2.5
-Django==4.1.1
+Django==4.1.2
 django-allauth==0.51.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==3.13.0
 django-filter==22.1
 django-rest-multiple-models==2.1.3
+django-sendgrid-v5==1.2.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.1
 filelock==3.8.0
@@ -27,21 +28,24 @@ mysqlclient==2.1.1
 oauthlib==3.2.1
 packaging==21.3
 Pillow==9.2.0
-pipenv==2022.9.24
+pipenv==2022.10.11
 platformdirs==2.5.2
 protobuf==4.21.7
-psycopg2-binary==2.9.3
+psycopg2-binary==2.9.4
 pycparser==2.21
 PyJWT==2.5.0
 pyparsing==3.0.9
+python-http-client==3.3.7
 python3-openid==3.2.0
 pytz==2022.4
 redis==4.3.4
 requests==2.28.1
 requests-oauthlib==1.3.1
+sendgrid==6.9.7
 six==1.16.0
 spotipy==2.20.0
 sqlparse==0.4.3
+starkbank-ecdsa==2.1.0
 tmdbsimple==2.9.1
 types-cryptography==3.3.23
 urllib3==1.26.12
